<resources>
    <string name="app_name">ChaosWorkout</string>
    <string name="title_home">Actual week</string>
    <string name="title_dashboard">Exersises</string>
    <string name="title_notifications">Progress</string>
    <string name="title_week">Week of</string>
    <string name="title_push">Push progress(tue, thu, sat)</string>
    <string name="title_pull">Pull progress(wed, fri, sun)</string>
    <string name="title_burn">Burn progress(all day)</string>
    <string name="title_challange">Challenge progress(all day)</string>
    <string name="muscle_chest">Chest</string>
    <string name="muscle_triceps">Triceps</string>
    <string name="muscle_shoulder">Shoulder</string>
    <string name="muscle_biceps">Biceps</string>
    <string name="muscle_back">Back</string>
    <string name="muscle_core">Core</string>
    <string name="muscle_legs">Legs</string>
    <string name="muscle_cardio">Cardio</string>
    <string name="muscle_chall">Challange</string>
    <string name="muscle_all">All</string>
    <string name="short_point">Pts</string>
    <string name="short_repitition">Reps</string>
    <string name="chall_pushup">Push-ups</string>
    <string name="chall_dip">Dips</string>
    <string name="chall_pikepushup">Pike push-ups</string>
    <string name="chall_pullup">Pull-ups</string>
    <string name="chall_chinup">Chin-ups</string>
    <string name="chall_widepullup">Wide Pull-ups</string>
    <string name="chall_squat">Squats</string>
    <string name="chall_toebar">Toes to bars</string>
    <string name="chall_burpee">Burpees</string>
    <string name="chall_run">Cycling</string>
    <string name="chall_bike">Running</string>
    <string name="form_rep">Repitition:</string>
    <string name="form_diff">Avg. +kg:</string>
    <string name="form_add">  ADD  </string>
    <string name="form_cancel">CANCEL</string>
    <string name="form_10">10 min</string>
    <string name="form_15">15 min</string>
    <string name="form_30">30 min</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



</resources>